--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.26</version>
+			<version>8.0.27</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -180,7 +180,23 @@
 			<artifactId>UserAgentUtils</artifactId>
 			<version>1.19</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.2.11</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-core</artifactId>
+			<version>2.2.11</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.2.11</version>
+		</dependency>
 	</dependencies>
+
 	<build>
 		<finalName>${finalNameProject}</finalName>
 		<plugins>
@@ -202,4 +218,13 @@
 			</resource>
 		</resources>
 	</build>
+	
+	<distributionManagement>
+        <repository>
+              <id>myrepository</id>
+              <url>file:C:/repository/</url>
+        </repository>
+      </distributionManagement>
+	
+	
 </project>
