alteracoes deste commit:
- alterações no properties

--- a/src/main/resources/desenvolvimento.properties
+++ b/src/main/resources/desenvolvimento.properties
@@ -3,6 +3,6 @@ email.usuario=nao-responda
 email.dominio=gift4us.com.br
 email.senha=P34s0n123*
 email.cadastro.assunto=Gift4us - Cadastro de usuário
-arquivo.diretorio.produto.upload=C:\\_temp\\gift4us\\produtos\\
-arquivo.diretorio.produto.download=C:\\_temp\\gift4us\\produtos\\
+arquivo.diretorio.produto.upload=C:\\_temp\\produtos\\
+arquivo.diretorio.produto.download=C:\\_temp\\produtos\\
 arquivo.diretorio.barra=\\
