--- a/src/main/resources/producao.properties
+++ b/src/main/resources/producao.properties
@@ -3,6 +3,6 @@ email.usuario=nao-responda
 email.dominio=gift4us.com.br
 email.senha=P34s0n123*
 email.cadastro.assunto=Gift4us - Cadastro de usuário
-arquivo.diretorio.produto=/docs/produtos/
-arquivo.diretorio.produto=/docs/produtos/
+arquivo.diretorio.produto.upload=/docs/produtos/
+arquivo.diretorio.produto.download=/docs/produtos/
 arquivo.diretorio.barra = \\
