alterações deste commit:
- ajustes na url dos produtos e na chamadas dos css e js.

--- a/src/main/resources/desenvolvimento.properties
+++ b/src/main/resources/desenvolvimento.properties
@@ -6,3 +6,5 @@ email.cadastro.assunto=Gift4us - Cadastro de usuário
 arquivo.diretorio.produto.upload=C:\\_temp\\produtos\\
 arquivo.diretorio.produto.download=C:\\_temp\\produtos\\
 arquivo.diretorio.barra=\\
+diretorio.recursos.site=../../resources-site/
+diretorio.recursos.admin=/resources/resources/
