--- a/src/main/resources/homologacao.properties
+++ b/src/main/resources/homologacao.properties
@@ -5,4 +5,6 @@ email.senha=P34s0n123*
 email.cadastro.assunto=Gift4us - Cadastro de usuário
 arquivo.diretorio.produto.upload=/docs/produtos/
 arquivo.diretorio.produto.download=/docs/produtos/
-arquivo.diretorio.barra = \\
+arquivo.diretorio.barra = /
+diretorio.recursos.site=../../resources-site/
+diretorio.recursos.admin=/resources/
