alteraçoes deste commit:
- ajustando as urls em desenvolvimento e produção.

--- a/src/main/resources/desenvolvimento.properties
+++ b/src/main/resources/desenvolvimento.properties
@@ -3,8 +3,6 @@ email.usuario=nao-responda
 email.dominio=gift4us.com.br
 email.senha=P34s0n123*
 email.cadastro.assunto=Gift4us - Cadastro de usuário
-arquivo.diretorio.produto.upload=C:\\_temp\\produtos\\
-arquivo.diretorio.produto.download=C:\\_temp\\produtos\\
-arquivo.diretorio.barra=\\
-diretorio.recursos.site=../../resources-site/
-diretorio.recursos.admin=/resources/resources/
+arquivo.diretorio.produto.upload=../../resources-site/image/product/
+arquivo.diretorio.produto.download=../../resources-site/image/product/
+arquivo.diretorio.barra=//
