--- a/.classpath
+++ b/.classpath
@@ -75,9 +75,9 @@
 	<classpathentry kind="var" path="M2_REPO/eu/bitwalker/UserAgentUtils/1.19/UserAgentUtils-1.19.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/sun/xml/bind/jaxb-core/2.2.11/jaxb-core-2.2.11.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/sun/xml/bind/jaxb-impl/2.2.11/jaxb-impl-2.2.11.jar"/>
-	<classpathentry kind="lib" path="C:/_Person/dev/servers/apache-tomcat-9.0.54/lib/annotations-api.jar">
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0">
 		<attributes>
-			<attribute name="javadoc_location" value="https://javaee.github.io/javaee-spec/javadocs/"/>
+			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
